[package]
name = "hubble"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Official Hubble plugin SDK for Rust"
repository = "https://github.com/keystroke-tools/hubble-sdk-rs"

[dependencies]
capnp = "0.21.0"
pulldown-cmark = "0.13.0"
sha2 = { version = "0.10.8", default-features = false }
thiserror = "2.0.12"
whatlang = "0.16.4"

[build-dependencies]
capnpc = "0.21.0"
